--- a/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -1,6 +1,22 @@
-﻿@page "/HomePage"
+﻿@page "/"
+@inject HttpClient Http
+
 <h3>HomePage</h3>
 
 @code {
-    
+
+    private IEnumerable<Trail>? _trails;
+
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            _trails = await Http.GetFromJsonAsync<IEnumerable<Trail>>("trails/trail-data.json");
+        }
+        catch (HttpRequestException ex)
+        {
+            Console.WriteLine($"There was a problem loading trail data: {ex.Message}");
+        }
+    }
+
 }
