--- a/BlazorLifecycle/Pages/HomePage.razor
+++ b/BlazorLifecycle/Pages/HomePage.razor
@@ -4,6 +4,9 @@
     <div class="row align-self-center">
         <Lifecycle />
     </div>
+    <div class="row align-self-center">
+        <AsyncGreeting />
+    </div>
 </div>
 
 
