--- a/BlazorLifecycle/Pages/HomePage.razor
+++ b/BlazorLifecycle/Pages/HomePage.razor
@@ -4,8 +4,8 @@
     <div class="row align-self-center">
         <Lifecycle />
     </div>
-    <div class="row align-self-center">
-        <AsyncGreeting />
+    <div class="row align-items-start">
+        <NavLink href="GreetingPage">Greetings Page</NavLink>
     </div>
 </div>
 
