--- a/BlazingTrails/BlazingTrails.Client/Features/Home/TrailCard.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/TrailCard.razor
@@ -15,6 +15,9 @@
                 <span class="oi oi-infinity mr-2"></span>
                 @Trail.Length km
             </span>
+            <button class="btn btn-primary" title="View" @onclick="@(() => OnSelected?.Invoke(Trail))">
+                <i class="bi bi-binoculars"></i>
+            </button>
         </div>
     </div>
 </div>
@@ -24,4 +27,6 @@
     [Parameter, EditorRequired]
     public Trail Trail { get; set; } = default!;
 
+    [Parameter, EditorRequired]
+    public Action<Trail> OnSelected { get; set; }
 }
