Use EventCallback to avoid explicit call of StateHasChanged in the HandleTrailSelected

--- a/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -36,10 +36,5 @@ else
         }
     }
 
-    private void HandleTrailSelected(Trail trail)
-    {
-        _selectedTrail = trail;
-        StateHasChanged();
-    }
-
+    private void HandleTrailSelected(Trail trail) => _selectedTrail = trail;
 }
