--- a/BlazingTrails/BlazingTrails.Client/Features/Home/SearchPage.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/SearchPage.razor
@@ -1,4 +1,5 @@
 @page "/search/{SearchTerm}"
+@page "/search/{SearchTerm}/maxlength/{MaxLength:int}"
 @inject HttpClient Http
 @inject NavigationManager NavManager
 
@@ -14,6 +15,7 @@
 </nav>
 
 <h3 class="mt-5 mb-4">Search results for "@SearchTerm"</h3>
+<SearchFilter SearchTerm="@SearchTerm" />
 
 @if (_searchResults == null)
 {
@@ -33,9 +35,13 @@ else
 @code {
     private IEnumerable<Trail>? _searchResults;
     private Trail? _selectedTrail;
-    
+    private IEnumerable<Trail> _cachedSearchResults = Array.Empty<Trail>();
+
     [Parameter]
     public string SearchTerm { get; set; } = default!;
+    
+    [Parameter]
+    public int? MaxLength { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -44,10 +50,23 @@ else
             var allTrails = await Http.GetFromJsonAsync<IEnumerable<Trail>>("trails/trail-data.json");
             _searchResults = allTrails!.Where(x => x.Name.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase) ||
                                                    x.Location.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase));
+            _cachedSearchResults = _searchResults;
         }
         catch (HttpRequestException ex)
         {
             Console.WriteLine($"There was a problem loading trail data: {ex.Message}");
+        }
+    }
+
+    protected override void OnParametersSet()
+    {
+        if (_cachedSearchResults.Any() && MaxLength.HasValue)
+        {
+            _searchResults = _cachedSearchResults.Where(x => x.Length <= MaxLength.Value);
+        }
+        else if (_cachedSearchResults.Any() && MaxLength is null)
+        {
+            _searchResults = _cachedSearchResults;
         }
     }
 
