Filter trails by max hiking time and utilize the query string parameters.

--- a/BlazingTrails/BlazingTrails.Client/Features/Home/SearchFilter.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/SearchFilter.razor
@@ -4,6 +4,8 @@
     <label for="maxLength">Max Length</label>
     <input id="maxLength" type="number"
            class="form-control" @bind="_maxLength" />
+    <label for="maxTime">Max Time (hours)</label>
+    <input id="maxTime" type="number" class="form-control" @bind="_maxTime" />
     <button class="btn btn-outline-primary"
             @onclick="FilterSearchResults">
         Filter
@@ -16,17 +18,28 @@
 
 @code {
     private int _maxLength;
+    private int _maxTime;
 
     [Parameter, EditorRequired]
     public string SearchTerm { get; set; } = default!;
 
-    private void FilterSearchResults() =>
-        NavManager.NavigateTo(
-            $"/search/{SearchTerm}/maxlength/{_maxLength}");
+    private void FilterSearchResults()
+    {
+        var uriWithQuerystring = NavManager.GetUriWithQueryParameters(
+            new Dictionary<string, object?>()
+            {
+                [nameof(SearchPage.MaxLength)] = _maxLength == 0 ? null : _maxLength,
+                [nameof(SearchPage.MaxTime)] =
+                    _maxTime == 0 ? null : _maxTime
+            });
+        NavManager.NavigateTo(uriWithQuerystring);
+    }
+        
 
     private void ClearSearchFilter()
     {
         _maxLength = 0;
+        _maxTime = 0;
         NavManager.NavigateTo($"/search/{SearchTerm}");
     }
 }
