Set search filters from the values contained in a query string

--- a/BlazingTrails/BlazingTrails.Client/Features/Home/SearchPage.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/SearchPage.razor
@@ -15,7 +15,7 @@
 </nav>
 
 <h3 class="mt-5 mb-4">Search results for "@SearchTerm"</h3>
-<SearchFilter SearchTerm="@SearchTerm" />
+<SearchFilter SearchTerm="@SearchTerm" MaxLength="MaxLength" MaxTime="MaxTime"/>
 
 @if (_searchResults == null)
 {
