--- a/BlazingTrails/BlazingTrails.Client/Features/Home/SearchFilter.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/Home/SearchFilter.razor
@@ -22,6 +22,15 @@
 
     [Parameter, EditorRequired]
     public string SearchTerm { get; set; } = default!;
+    
+    [Parameter] public int? MaxLength { get; set; }
+    [Parameter] public int? MaxTime { get; set; }
+
+    protected override void OnInitialized()
+    {
+        _maxLength = MaxLength ?? 0;
+        _maxTime = MaxTime ?? 0;
+    }
 
     private void FilterSearchResults()
     {
