--- a/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
@@ -14,32 +14,20 @@
 <EditForm Model="_trail" OnValidSubmit="SubmitForm">
     <FormSection Title="Basic Details" HelpText="This information is used to identify 
             the trail and can be searched to help hikers find it.">
-        <div class="row">
-            <div class="col-6">
-                <div class="form-group">
-                    <label for="trailName" class="font-weight-bold text-secondary">Name</label>
-                    <InputText @bind-Value="_trail.Name" class="form-control" id="trailName" />
-                </div>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="trailDescription" class="font-weight-bold text-secondary">Description</label>
-                    <InputTextArea @bind-Value="_trail.Description" rows="6" class="form-control" id="trailDescription" />
-                </div>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="col-6">
-                <div class="form-group">
-                    <label for="trailLocation" class="font-weight-bold text-secondary">Location</label>
-                    <InputText @bind-Value="_trail.Location" class="form-control" id="trailLocation" />
-                </div>
-            </div>
-        </div>
+        <FormFieldSet Width="col-6">
+            <label for="trailName" class="font-weight-bold text-secondary">Name</label>
+            <InputText @bind-Value="_trail.Name" class="form-control" id="trailName"/>
+        </FormFieldSet>
+
+        <FormFieldSet>
+            <label for="trailDescription" class="font-weight-bold text-secondary">Description</label>
+            <InputTextArea @bind-Value="_trail.Description" rows="6" class="form-control" id="trailDescription"/>
+        </FormFieldSet>
+
+        <FormFieldSet Width="col-6">
+            <label for="trailLocation" class="font-weight-bold text-secondary">Location</label>
+            <InputText @bind-Value="_trail.Location" class="form-control" id="trailLocation"/>
+        </FormFieldSet>
     </FormSection>
     
     <div class="mt-4 mb-5">
