--- a/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
+++ b/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
@@ -30,6 +30,14 @@
         </FormFieldSet>
     </FormSection>
     
+    <FormSection Title="Difficulty" HelpText="Help other hikers out by 
+            telling them the length of the trail is how long it might take them.">
+        <FormFieldSet Width="col-3">
+            <label for="trailLength" class="font-weight-bold text-secondary">Length (km)</label>
+            <InputNumber @bind-Value="_trail.Length" class="form-control" id="trailLength" />
+        </FormFieldSet>
+    </FormSection>
+    
     <div class="mt-4 mb-5">
         <div class="row">
             <div class="offset-4 col-8 text-right">
