--- a/BlazingTrails.Client/wwwroot/css/app.css
+++ b/BlazingTrails.Client/wwwroot/css/app.css
@@ -1,5 +1,21 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+.validation-message {
+    color: red;
+}
+
+.input.invalid, 
+textarea.invalid,
+select.invalid {
+    border-color: red;
+}
+
+input.valid.modified,
+text.valid.modified,
+select.valid.modified {
+    border-color: green;
+}
+
 :root {
     --brand: #448922;
     --brand-hover: #5da030;
