--- a/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
@@ -66,7 +66,15 @@ else if (_errorMessage is not null)
             <InputNumber @bind-Value="_trail.Length" class="form-control" id="trailLength"/>
             <ValidationMessage For="@(() => _trail.Length)" />
         </FormFieldSet>
+        <FormFieldSet Width="col-5">
+            <label for="trailTime" class="font-weight-bold text-secondary">
+                Time
+            </label>
+            <InputTime @bind-Value="_trail.TimeInMinutes" id="trailTime" />
+        </FormFieldSet>
     </FormSection>
+    
+    
 
     <FormSection Title="Route Instructions"
                  HelpText="Route instructions are a guide for the trail. This helps hikers new to the trail stay on track.">
