--- a/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
@@ -56,6 +56,13 @@ else if (_errorMessage is not null)
             <InputText @bind-Value="_trail.Location" class="form-control" id="trailLocation"/>
             <ValidationMessage For="@(() => _trail.Location)" />
         </FormFieldSet>
+        
+        <FormFieldSet>
+            <label for="trailImage" class="font-weight-bold text-secondary">
+                Image
+            </label>
+            <InputFile OnChange="LoadTrailImage" class="form-control-file" id="trailImage" accept=".png,.jpg,.jpeg" />
+        </FormFieldSet>
     </FormSection>
 
     <FormSection Title="Difficulty"
@@ -151,8 +158,39 @@ else if (_errorMessage is not null)
             return;
         }
 
-        _trail = new TrailDto();
-        _errorMessage = null;
-        _submitSuccessful = true;
+        if (_trailImage is null)
+        {
+            _submitSuccessful = true;
+            ResetForm();
+            return;
+        }
+
+        await ProcessImage(response.TrailId);
     }
+
+    private async Task ProcessImage(int trailId)
+    {
+        var imageUploadResponse = await Mediator.Send(new UploadTrailImageRequest(trailId, _trailImage));
+
+        if (string.IsNullOrEmpty(imageUploadResponse.ImageName))
+        {
+            _errorMessage = "Your traili was saved, but there was a problem uploading the image.";
+            return;
+        }
+        
+        _submitSuccessful = true;
+        ResetForm();
+    }
+
+    private void ResetForm()
+    {
+        _trail = new TrailDto();
+        _editContext = new EditContext(_trail);
+        _editContext.SetFieldCssClassProvider(new BootstrapCssClassProvider());
+        _trailImage = null;
+    }
+
+    private IBrowserFile? _trailImage;
+
+    private void LoadTrailImage(InputFileChangeEventArgs e) => _trailImage = e.File;
 }
