--- a/BlazingTrails.Client/Features/ManageTrails/_Imports.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/_Imports.razor
@@ -1,2 +1,5 @@
 @using BlazingTrails.Shared.Features.ManageTrails
 @using BlazingTrails.Client.Features.ManageTrails.Shared
+@using BlazingTrails.Client.Features.ManageTrails.AddTrail
+@using BlazingTrails.Shared.Features.ManageTrails.Shared
+@using BlazingTrails.Shared.Features.ManageTrails.AddTrail
