--- a/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
@@ -23,11 +23,24 @@
             <ValidationMessage For="@(() => _trail.Location)" />
         </FormFieldSet>
 
-        <FormFieldSet>
+        <FormFieldSet Width="col-6">
             <label for="trailImage" class="font-weight-bold text-secondary">
                 Image
             </label>
-            <InputFile OnChange="LoadTrailImage" class="form-control-file" id="trailImage" accept=".png,.jpg,.jpeg" />
+            @if (string.IsNullOrWhiteSpace(_trail.Image))
+            {
+                <InputFile OnChange="LoadTrailImage" class="form-control-file" id="trailImage" 
+                           accept=".png,.jpg,.jpeg" />
+            }
+            else
+            {
+                <div class="card bg-dark text-white">
+                    <img src="images\@_trail.Image" />
+                    <div class="card-img-overlay">
+                        <button class="btn btn-primary btn-sm" @onclick="RemoveTrailImage">Remove</button>
+                    </div>
+                </div>
+            }
         </FormFieldSet>
     </FormSection>
 
@@ -144,7 +157,17 @@
         _trailImage = null;
     }
 
-    private void LoadTrailImage(InputFileChangeEventArgs e) => _trailImage = e.File;
+    private void LoadTrailImage(InputFileChangeEventArgs e)
+    {
+        _trailImage = e.File;
+        _trail.ImageAction = ImageAction.Add;
+    }
+
+    private void RemoveTrailImage()
+    {
+        _trail.Image = null;
+        _trail.ImageAction = ImageAction.Remove;
+    }
 
     private async Task SubmitForm() => await OnSubmit(_trail, _trailImage);
 }
