Update the Home feature to load trail data from the API

--- a/BlazingTrails.Client/Features/Home/Search/SearchPage.razor
+++ b/BlazingTrails.Client/Features/Home/Search/SearchPage.razor
@@ -1,5 +1,6 @@
 @page "/search/{SearchTerm}"
 @page "/search/{SearchTerm}/maxlength/{MaxLength:int}"
+@using BlazingTrails.Client.Features.Home.Shared
 @inject HttpClient Http
 @inject NavigationManager NavManager
 
