--- a/BlazingTrails.Client/_Imports.razor
+++ b/BlazingTrails.Client/_Imports.razor
@@ -11,3 +11,5 @@
 @using BlazingTrails.Client.Features.Layout
 @using Blazored.FluentValidation
 @using MediatR;
+@using BlazingTrails.Shared.Features.Home.Shared
+@using BlazingTrails.Client.Features.Home.Shared
