--- a/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
-@using BlazingTrails.Client.Features.Home.Shared
-@inject HttpClient Http
+@inject IMediator Mediator
 
 <PageTitle>Blazing Trails</PageTitle>
 
@@ -30,7 +29,17 @@ else
     {
         try
         {
-            _trails = await Http.GetFromJsonAsync<IEnumerable<Trail>>("trails/trail-data.json");
+            var response = await Mediator.Send(new GetTrailsRequest());
+            _trails = response.Trails.Select(x => new Trail
+            {
+                Id = x.Id,
+                Name = x.Name,
+                Image = x.Image,
+                Description = x.Description,
+                Location = x.Location,
+                Length = x.Length,
+                TimeInMinutes = x.TimeInMinutes
+            });
         }
         catch (HttpRequestException ex)
         {
