Update SearchPage.razor to use MediatR

--- a/BlazingTrails.Client/Features/Home/Search/SearchPage.razor
+++ b/BlazingTrails.Client/Features/Home/Search/SearchPage.razor
@@ -1,8 +1,6 @@
 @page "/search/{SearchTerm}"
 @page "/search/{SearchTerm}/maxlength/{MaxLength:int}"
-@using BlazingTrails.Client.Features.Home.Shared
-@inject HttpClient Http
-@inject NavigationManager NavManager
+@inject IMediator Mediator
 
 <PageTitle>Search Trails - Blazing Trails</PageTitle>
 
@@ -51,10 +49,23 @@ else
     {
         try
         {
-            var allTrails = await Http.GetFromJsonAsync<IEnumerable<Trail>>("trails/trail-data.json");
+            var response = await Mediator.Send(new GetTrailsRequest());
+            var allTrails = response.Trails.Select(x => new Trail
+            {
+                Id = x.Id,
+                Name = x.Name,
+                Image = x.Image,
+                Description = x.Description,
+                Location = x.Location,
+                Length = x.Length,
+                TimeInMinutes = x.TimeInMinutes
+            });
+
             _searchResults = allTrails!.Where(x => x.Name.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase) ||
                                                    x.Location.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase));
             _cachedSearchResults = _searchResults;
+            
+            UpdateFilters();
         }
         catch (HttpRequestException ex)
         {
