--- a/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
+++ b/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
@@ -1,5 +1,9 @@
-﻿<div class="card shadow" style="width: 18rem;">
-    <img src="@Trail.Image" class="card-img-top" alt="@Trail.Name">
+﻿@inject NavigationManager NavManager
+
+<div class="card shadow" style="width: 18rem;">
+    <img src="@(!string.IsNullOrWhiteSpace(Trail.Image) 
+                  ? $"images/{Trail.Image}" : "https://via.placeholder.com/286x190.jpg?text=No+Image+For+Trail")" 
+         class="card-img-top"/>
     <div class="card-body">
         <h5 class="card-title">@Trail.Name</h5>
         <h6 class="card-subtitle mb-3 text-muted">
@@ -18,6 +22,8 @@
             <button class="btn btn-primary" title="View" @onclick="@(async () => await OnSelected.InvokeAsync(Trail))">
                 <i class="bi bi-binoculars"></i>
             </button>
+            <button class="btn btn-outline-secondary float-right" title="Edit"
+                    @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">Update</button>
         </div>
     </div>
 </div>
