--- a/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @inject IMediator Mediator
+@inject NavigationManager NavManager
 
 <PageTitle>Blazing Trails</PageTitle>
 
@@ -18,12 +19,50 @@ else
         </div>
         <TrailDetails Trail="_selectedTrail" />
         <TrailSearch /> 
-        <div class="grid">
-            @foreach (var trail in _trails)
-            {
-            <TrailCard Trail="trail" OnSelected="HandleTrailSelected" />
-            }
-        </div>
+        <ViewSwitcher>
+            <GridTemplate>
+                <div class="grid">
+                    @foreach (var trail in _trails)
+                    {
+                    <TrailCard Trail="trail" OnSelected="HandleTrailSelected" />
+                    }
+                </div>        
+            </GridTemplate>
+            <TableTemplate>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Location</th>
+                        <th>Length</th>
+                        <th>Time</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var trail in _trails)
+                        {
+                            <tr>
+                                <th scope="col">@trail.Name</th>
+                                <td>@trail.Location</td>
+                                <td>@(trail.Length)km</td>
+                                <td>@trail.TimeFormatted</td>
+                                <td class="text-right">
+                                    <button @onclick="() => HandleTrailSelected(trail)"
+                                            title="View" class="btn btn-primary">
+                                        <i class="bi bi-binoculars"></i>
+                                    </button>
+                                    <button @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{trail.Id}"))"
+                                            title="Edit" class="btn btn-outline-secondary">
+                                        <i class="bi bi-pencil"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </TableTemplate>
+        </ViewSwitcher>
     }
     else
     {
