--- a/BlazingTrails.Client/Features/Home/Shared/ViewSwitcher.razor
+++ b/BlazingTrails.Client/Features/Home/Shared/ViewSwitcher.razor
@@ -1,3 +1,5 @@
+@typeparam TItem
+
 <div>
     <div class="mb-3 text-end">
         <div class="btn-group">
@@ -14,11 +16,30 @@
     
     @if (_mode == ViewMode.Grid)
     {
-        @GridTemplate
+        <div class="grid">
+            @foreach (var item in Items)
+            {
+                @GridTemplate(item)
+            }
+        </div>
     }
     else if (_mode == ViewMode.Table)
     {
-        @TableTemplate
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                @HeaderTemplate
+            </tr>
+            </thead>
+            <tbody>
+            @foreach(var item in Items)
+            {
+                <tr>
+                @RowTemplate(item)
+                </tr>
+            }
+            </tbody>
+        </table>
     }
 </div>
 
@@ -26,10 +47,16 @@
     private ViewMode _mode = ViewMode.Grid;
 
     [Parameter, EditorRequired] 
-    public RenderFragment GridTemplate { get; set; } = default!;
+    public IEnumerable<TItem> Items { get; set; } = default!;
+
+    [Parameter, EditorRequired] 
+    public RenderFragment<TItem> GridTemplate { get; set; } = default!;
 
     [Parameter, EditorRequired]
-    public RenderFragment TableTemplate { get; set; } = default!;
+    public RenderFragment HeaderTemplate { get; set; } = default!;
+
+    [Parameter, EditorRequired]
+    public RenderFragment<TItem> RowTemplate { get; set; } = default!;
 
     private enum ViewMode
     {
