Move ViewSwitcher.razor to the Razoe class library (RCL)

--- a/BlazingTrails.Client/_Imports.razor
+++ b/BlazingTrails.Client/_Imports.razor
@@ -13,3 +13,4 @@
 @using MediatR;
 @using BlazingTrails.Shared.Features.Home.Shared
 @using BlazingTrails.Client.Features.Home.Shared
+@using BlazingTrails.ComponentLibrary
