--- a/BlazingTrails.ComponentLibrary/Map/RouteMap.razor
+++ b/BlazingTrails.ComponentLibrary/Map/RouteMap.razor
@@ -19,6 +19,15 @@
     private IJSObjectReference? _routeMapModule;
 
     [Parameter]
+    public List<LatLong> Waypoints { get; set; } = new List<LatLong>();
+    
+    [Parameter]
+    public EventCallback<LatLong> OnWaypointAdded { get; set; }
+    
+    [Parameter]
+    public EventCallback<LatLong> OnWaypointDeleted { get; set; }
+    
+    [Parameter]
     public string Height { get; set; } = "500px";
     [Parameter]
     public string Width { get; set; } = "1000px";
@@ -30,13 +39,12 @@
             _routeMapModule = await JSRuntime.InvokeAsync<IJSObjectReference>("import",
                 "./_content/BlazingTrails.ComponentLibrary/Map/RouteMap.razor.js");
             _routeMapReference = DotNetObjectReference.Create(this);
-            await _routeMapModule.InvokeVoidAsync("initialize", _map, _routeMapReference);
+            await _routeMapModule.InvokeVoidAsync("initialize", _map, _routeMapReference, Waypoints);
         }
     }
 
     [JSInvokable]
-    public void WaypointAdded(decimal latitude, decimal longitude) => Console.WriteLine($"Added Waypoint - Latitude: {latitude}, " +
-                                                                                        $"Longitude: {longitude}");
+    public async Task WaypointAdded(decimal latitude, decimal longitude) => await OnWaypointAdded.InvokeAsync(new LatLong(latitude, longitude));
 
     async ValueTask IAsyncDisposable.DisposeAsync()
     {
@@ -51,9 +59,9 @@
     {
         if (_routeMapModule is not null)
         {
-            var message = await _routeMapModule.InvokeAsync<string>("deleteLastWaypoint", _map);
-            Console.WriteLine(message);
+            var waypoint = await _routeMapModule.InvokeAsync<LatLong>("deleteLastWaypoint", 
+                _map, _routeMapReference);
+            await OnWaypointDeleted.InvokeAsync(waypoint);
         }
     }
-
 }
