--- a/BlazingTrails.ComponentLibrary/Map/RouteMap.razor
+++ b/BlazingTrails.ComponentLibrary/Map/RouteMap.razor
@@ -3,14 +3,17 @@
 @implements IAsyncDisposable
 
 <div class="map-wrapper">
-    <div class="controls">
-        <button @onclick="DeleteLastWaypoint" class="btn btn-secondary" title="Delete last waypoint"
-                type="button">
-            <i class="bi bi-trash"></i>
-            Remove Last Waypoint
-        </button>
-    </div>
+    @if (!IsReadOnly){
+        <div class="controls">
+            <button @onclick="DeleteLastWaypoint" class="btn btn-secondary" title="Delete last waypoint"
+                    type="button">
+                <i class="bi bi-trash"></i>
+                Remove Last Waypoint
+            </button>
+        </div>
+    }
     <div style="height: @(Height); width:@(Width);" @ref="_map"></div>
+
 </div>
 
 @code {
@@ -18,6 +21,9 @@
     private ElementReference _map;
     private IJSObjectReference? _routeMapModule;
 
+    [Parameter]
+    public bool IsReadOnly { get; set; }
+    
     [Parameter]
     public List<LatLong> Waypoints { get; set; } = new List<LatLong>();
     
@@ -39,7 +45,8 @@
             _routeMapModule = await JSRuntime.InvokeAsync<IJSObjectReference>("import",
                 "./_content/BlazingTrails.ComponentLibrary/Map/RouteMap.razor.js");
             _routeMapReference = DotNetObjectReference.Create(this);
-            await _routeMapModule.InvokeVoidAsync("initialize", _map, _routeMapReference, Waypoints);
+            await _routeMapModule.InvokeVoidAsync("initialize", _map, _routeMapReference, Waypoints,
+                IsReadOnly);
         }
     }
 
