--- a/BlazingTrails.Client/_Imports.razor
+++ b/BlazingTrails.Client/_Imports.razor
@@ -15,3 +15,6 @@
 @using BlazingTrails.Client.Features.Home.Shared
 @using BlazingTrails.ComponentLibrary
 @using BlazingTrails.ComponentLibrary.Map
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
