--- a/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -12,11 +12,21 @@ else
 {
     @if (_trails.Any())
     {
-        <div class="mb-4">
-            <p class="font-italic text-center">Do you have
-                an awesome trail you'd like to share?
-                <a href="add-trail">Add it here</a>.</p>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+                <div class="mb-4">
+                    <p class="font-italic text-center">Do you have
+                        an awesome trail you'd like to share?
+                        <a href="add-trail">Add it here</a>.</p>
+                </div>        
+            </Authorized>
+            <NotAuthorized>
+                <div class="mb-4">
+                    <p class="font-italic text-center">Do you have an awesome trail you'd like to share? 
+                        Please <a href="authentication/login">log in or sign up</a>.</p>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
         <TrailDetails Trail="_selectedTrail" />
         <TrailSearch /> 
         <ViewSwitcher Items="_trails" Context="trail">
@@ -35,14 +45,19 @@ else
                 <td>@trail.Location</td>
                 <td>@(trail.Length)km</td>
                 <td>@trail.TimeFormatted</td>
-                <td class="text-right">
+                <td class="text-end">
+                    <AuthorizeView>
+                        @if (trail.Owner.Equals(context.User.Identity?.Name, StringComparison.OrdinalIgnoreCase))
+                        {
+                            <button @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{trail.Id}"))"
+                                    title="Edit" class="btn btn-outline-secondary">
+                                <i class="bi bi-pencil"></i>
+                            </button>
+                        }
+                    </AuthorizeView>
                     <button @onclick="() => HandleTrailSelected(trail)"
                             title="View" class="btn btn-primary">
                         <i class="bi bi-binoculars"></i>
-                    </button>
-                    <button @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{trail.Id}"))"
-                            title="Edit" class="btn btn-outline-secondary">
-                        <i class="bi bi-pencil"></i>
                     </button>
                 </td>
             </RowTemplate>
@@ -88,6 +103,7 @@ else
                 Location = x.Location,
                 Length = x.Length,
                 TimeInMinutes = x.TimeInMinutes,
+                Owner = x.Owner,
                 Waypoints = x.Waupoints.Select(wp => new LatLong(wp.Latitude, wp.Longitude)).ToList()
             });
         }
