--- a/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
+++ b/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
@@ -22,8 +22,15 @@
             <button class="btn btn-primary" title="View" @onclick="@(async () => await OnSelected.InvokeAsync(Trail))">
                 <i class="bi bi-binoculars"></i>
             </button>
-            <button class="btn btn-outline-secondary float-right" title="Edit"
-                    @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">Update</button>
+            <AuthorizeView>
+                @if (Trail.Owner.Equals(context.User.Identity?.Name, StringComparison.OrdinalIgnoreCase))
+                {
+                    <button class="btn btn-outline-secondary float-right" title="Edit"
+                            @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">
+                        <i class="bi bi-pencil"></i>
+                    </button>
+                }
+            </AuthorizeView>
         </div>
     </div>
 </div>
