--- a/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
@@ -1,4 +1,5 @@
 @page "/edit-trail/{TrailId:int}"
+@attribute [Authorize]
 @using BlazingTrails.Shared.Features.ManageTrails.EditTrail
 @inject IMediator Mediator
 
