--- a/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
@@ -1,6 +1,9 @@
 @using BlazingTrails.Client.Validation
+@inject AppState AppState 
+
 <EditForm EditContext="_editContext" OnValidSubmit="SubmitForm">
     <FluentValidationValidator />
+    <FormStateTracker />
 
     <FormSection Title="Basic Details"
                  HelpText="This information is used to identify the trail and can be searched to help hikers find it.">
@@ -94,7 +97,7 @@
         _editContext = new EditContext(_trail);
         _editContext.SetFieldCssClassProvider(new BootstrapCssClassProvider());
 
-        if (Trail != null)
+        if (Trail is not null)
         {
             _trail.Id = Trail.Id;
             _trail.Name = Trail.Name;
@@ -108,10 +111,18 @@
             _trail.Waypoints.AddRange(Trail.Waypoints.Select(wp => 
                 new TrailDto.WaypointDto(wp.Latitude, wp.Longitude)));
         }
+        else
+        {
+          _trail = AppState.GetTrail();
+        }
+
+        _editContext = new EditContext(_trail);
+        _editContext.SetFieldCssClassProvider(new BootstrapCssClassProvider());
     }
 
     public void ResetForm()
     {
+        AppState.ClearTrail();
         _trail = new TrailDto();
         _editContext = new EditContext(_trail);
         _editContext.SetFieldCssClassProvider(new BootstrapCssClassProvider());
