--- a/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
@@ -113,7 +113,7 @@
         }
         else
         {
-          _trail = AppState.GetTrail();
+          _trail = AppState.NewTrailState.GetTrail();
         }
 
         _editContext = new EditContext(_trail);
@@ -122,7 +122,7 @@
 
     public void ResetForm()
     {
-        AppState.ClearTrail();
+        AppState.NewTrailState.ClearTrail();
         _trail = new TrailDto();
         _editContext = new EditContext(_trail);
         _editContext.SetFieldCssClassProvider(new BootstrapCssClassProvider());
